--- a/flash/map/.project
+++ b/flash/map/.project
@@ -21,5 +21,10 @@
 			<type>2</type>
 			<location>/Users/JJ/Desktop/untitled folder</location>
 		</link>
+		<link>
+			<name>bin-release1</name>
+			<type>2</type>
+			<location>/Users/JJ/Desktop/Codes/soundwalks.org/public/flash</location>
+		</link>
 	</linkedResources>
 </projectDescription>
